--- a/code/client/mixc_0.0.1/less/home/category.less
+++ b/code/client/mixc_0.0.1/less/home/category.less
@@ -1,7 +1,8 @@
 .home-category {
     .col {
-        height: calc(~"28vh - 10px");
+        height: calc(~"26vh - 10px");
         .bgimg();
+        cursor: pointer;
     }
     
     .justify {
