--- a/code/client/mixc_0.0.1/less/info.less
+++ b/code/client/mixc_0.0.1/less/info.less
@@ -21,7 +21,7 @@
             
             height: 4vh;
             line-height: 4vh;
-            font-size: 2vh;
+            font-size: 1.5vh;
         }
         
         a.active {
@@ -38,5 +38,9 @@
         float: left;
         padding: 10px;
         box-sizing: border-box;
+        
+        img {
+            max-width: 100%;
+        }
     }
 }
