--- a/code/client/mixc_0.0.1/less/swiper.less
+++ b/code/client/mixc_0.0.1/less/swiper.less
@@ -1,10 +1,51 @@
 // 广告组件
-.swiper-container {
+.ads.swiper-container {
     @h: calc(~"30vh - 10px");
     height: @h;
     
     .swiper-slide {
         height: @h;
         .bgimg();
+    }
+}
+.album.swiper-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    height:100vh;
+    width: 100vw;
+    background-color: #000;
+    
+    .pagination {
+        position: absolute;
+        bottom: 0;
+        left:0;
+        right: 0;
+        text-align: center;
+        height: 3vh;
+        line-height: 3vh;
+    }
+    
+    .swiper-pagination-switch {
+        height: 1vh;
+        width: 1vh;
+        background-color: rgba(223,340,255, 0.3);
+        display: inline-block;
+        border-radius: 1vh;
+        margin: 0.3vh;
+        transition: background-color 0.1s ease-in-out;
+    }
+    
+    .swiper-active-switch {
+        background-color: rgba(255,255,255, 0.8);
+    }
+    
+    .swiper-slide {
+        height:100vh;
+        width: 100vw;
+        .bgimg();
+        background-size: contain;
     }
 }
