--- a/code/client/mixc_0.0.1/css/app.css
+++ b/code/client/mixc_0.0.1/css/app.css
@@ -117,6 +117,33 @@ h5 {
   background-size: cover;
   background-size: contain;
 }
+.floor.swiper-container {
+  position: relative;
+  height: calc(29vh - 50px);
+  overflow: hidden;
+  width: calc(100vw - 20vh - 20px);
+}
+.floor.swiper-container .pagination {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  height: 3vh;
+  line-height: 3vh;
+}
+.floor.swiper-container .swiper-pagination-switch {
+  height: 1vh;
+  width: 1vh;
+  background-color: #999;
+  display: inline-block;
+  border-radius: 1vh;
+  margin: 0.3vh;
+  transition: background-color 0.1s ease-in-out;
+}
+.floor.swiper-container .swiper-active-switch {
+  background-color: #e05eb6;
+}
 .top-header {
   display: block;
   position: relative;
@@ -655,7 +682,6 @@ nav.home-nav .nav-wheel {
   background-color: #f5f5f5;
   padding-left: calc(16vh + 2vh);
   height: calc(33vh - 40px);
-  overflow: auto;
 }
 .floor .shops h5 {
   color: #e05eb6;
@@ -669,9 +695,14 @@ nav.home-nav .nav-wheel {
   float: left;
   height: 4vh;
   line-height: 4vh;
-  margin-right: 1vh;
+  margin-right: 0.5vh;
+  margin-left: 0.5vh;
+  margin-bottom: 1vh;
   width: calc((100vw - 22vh - 20px) / 3);
   text-align: center;
+}
+.floor .shops a:nth-child(1n) {
+  margin-left: 0vh;
 }
 .floor .shops a:nth-child(3n) {
   margin-right: 0vh;
