修改翻页控件

--- a/code/client/mixc_0.0.1/less/swiper.less
+++ b/code/client/mixc_0.0.1/less/swiper.less
@@ -28,18 +28,18 @@
         line-height: 3vh;
     }
     
-    .swiper-pagination-switch {
+    .swiper-pagination-bullet  {
         height: 1vh;
         width: 1vh;
-        background-color: rgba(223,340,255, 0.3);
+        background-color: rgba(255,255,255, 0.8);
         display: inline-block;
         border-radius: 1vh;
         margin: 0.3vh;
         transition: background-color 0.1s ease-in-out;
     }
     
-    .swiper-active-switch {
-        background-color: rgba(255,255,255, 0.8);
+    .swiper-pagination-bullet-active {
+        background-color: @red-color;
     }
     
     .swiper-slide {
@@ -70,7 +70,7 @@
         line-height: 3vh;
     }
     
-    .swiper-pagination-switch {
+    .swiper-pagination-bullet {
         height: 1vh;
         width: 1vh;
         background-color: @gray-color;
@@ -80,7 +80,7 @@
         transition: background-color 0.1s ease-in-out;
     }
     
-    .swiper-active-switch {
+    .swiper-pagination-bullet-active {
         background-color: @rose-color;
     }
 }
