--- a/code/client/mixc_0.0.1/less/app.less
+++ b/code/client/mixc_0.0.1/less/app.less
@@ -19,3 +19,11 @@
 
 @import "article.less";
 
+@import "model.less";
+
+@import "config.less";
+
+@import "password.less";
+
+@import "form.less";
+
