--- a/code/client/mixc_0.0.1/less/config.less
+++ b/code/client/mixc_0.0.1/less/config.less
@@ -8,6 +8,6 @@
         position:fixed;
         left:0;
         top:0;   
-        border: solid 1px red;
+        //border: solid 1px red;
     }
 }
